<resources>
    <string name="app_name" translatable="false">City Tourister</string>
    <string name="description_wizard">Para vivir la experiencia al máximo, necesitamos que autorices el uso de los servicios de ubicación y de notificaciones.</string>
    <string name="permission_location_title">Ubicación</string>
    <string name="permission_location_description">Necesitaremos tu ubicación para darte recomendaciones basadas en tu posición.</string>
    <string name="permission_notification_title">Notificaciones</string>
    <string name="permission_notification_description">Ocasionalmente te mandaremos avisos para avisarte de cosas importantes.</string>
    <string name="permission_allow">Permitir</string>
    <string name="permission_ready">Listo</string>
    <string name="permission_skip">Saltar</string>
    <string name="title_activity_inicio">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Diego Castagne</string>
    <string name="nav_header_subtitle">diego.castagne@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Herramientas</string>
    <string name="button_home">Inicio</string>
    <string name="button_map">Mapa</string>
    <string name="button_routes">Rutas</string>
    <string name="button_tickets">Boletos</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_routes">RoutesActivity</string>
    <string name="title_activity_tickets">TicketsActivity</string>
    <string name="my_preference">"com.abc.com.MyPref"</string>
    <string name="my_preference_key">"com.abc.com.MyPref"</string>
    <string name="tab_text_1">Puebla fascinante</string>
    <string name="tab_text_2">Cholula milenaria</string>


    <string name="login_label">Inicia sesión</string>
    <string name="signup_label">Regístrate</string>
    <string name="email_placeholder">Correo electrónico</string>
    <string name="password_placeholder">Contraseña</string>
    <string name="enter_button">Entrar</string>
    <string name="remember_me_switch_label">Recuérdame</string>
    <string name="social_networks_login_label">O conéctate usando redes sociales</string>
    <string name="no_account_yet_label">¿Aún no tienes cuenta?</string>
    <string name="signup_button">Regístrate</string>
    <string name="social_networks_signup_label">Regístrate usando redes sociales</string>
    <string name="name_placeholder">Nombre</string>
    <string name="lastname_placeholder">Apellido</string>
    <string name="warning_email_notification_label">Te enviaremos promociones comerciales y las actualizaciones de nuestras políticas a través del correo electrónico.</string>
    <string name="no_spam_switch_label">No quiero recibir correos comerciales y promociones de City Tourister</string>
    <string name="next_button">Siguiente</string>
    <string name="create_account_label">Crea tu cuenta</string>
    <string name="birthday_placeholder">Fecha de nacimiento</string>
    <string name="zip_placeholder">Código postal</string>
    <string name="phone_placeholder">Numéro telefónico</string>
    <string name="confirm_password_label">Confirme contraseña</string>
    <string name="warning_signup_label">Al tocar "Aceptar y Regístrar" confirmas que leíste la Política de Privacidadc y que aceptas las Condiciones de Servicio</string>
    <string name="register_accept_button">Aceptar y registrar</string>

    <string name="recommendations_title">Recomendaciones</string>
    <string name="recommendations_description">Encuentra ofertas y descuentos exclusivos en restaurantes, hoteles, museos y más.</string>
    <string name="interestingPoints_title">Puntos de interés</string>
    <string name="interestingPoints_description">Explora los lugares turísticos más relevantes desde el mapa interactivo.</string>
    <string name="stops_title">Paradas</string>
    <string name="stops_description"> Encuentra las paradas disponibles para bajar o subir de tu City Tourister®.</string>
    <string name="stops_description2">*No válido en temporada alta</string>


    <string name="not_valid_email_toast">El email no es válido</string>
    <string name="not_valid_password_toast">El correo requiere al menos </string>
    <string name="not_valid_login_toast">Email or password incorrect</string>
    <string name="valid_login_toast">Welcome</string>
    <string name="mail_exists_toast">Email already exists</string>
    <string name="valid_signup_mail">Complete your Sign Up</string>
    <string name="succesfull_signup_toast">Successfully Signed Up</string>


    <string name="not_succesfull_signup_toast">Something wen\'t wrong… please try again.</string>
    <string name="login_api">https://api-estrella-roja.appspot.com/users/login</string>
    <string name="check_email_api">http://api-estrella-roja.appspot.com/users/checkEmail</string>
    <string name="signup_api">http://api-estrella-roja.appspot.com/users</string>

    <string name="title_activity_info">InfoActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
