<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_Inicio"
            android:onClick="ViewHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/button_home"
            android:textColor="@color/editTextColorWhite" />

        <Button
            android:id="@+id/btn_Mapa"
            android:onClick="ViewMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/button_map"
            android:textColor="@color/editTextColorWhite" />

        <Button
            android:id="@+id/btn_Rutas"
            android:onClick="ViewRoutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/button_routes"
            android:textColor="@color/editTextColorWhite" />

        <Button
            android:id="@+id/btn_Boletos"
            android:onClick="ViewTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/button_tickets"
            android:textColor="@color/editTextColorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="352dp"
            android:layout_height="202dp"
            android:layout_marginTop="60dp"
            app:autoPlay="false"
            app:fillColor="@color/colorPrimary"
            app:pageColor="@color/editTextColorWhite"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="296dp"
        android:layout_height="97dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/textView5"
            android:layout_centerHorizontal="true"
            android:text="Registra tu pulsera"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="11dp"
            android:ems="14"
            android:inputType="number"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColorLink="@color/common_google_signin_btn_text_dark_default" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="270dp"
        android:layout_height="100dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="331dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="32dp"
        app:srcCompat="@drawable/no_boleto" />


</RelativeLayout>